Bug 494580 - Incorrect display of description encoding in utf-8
Summary: Incorrect display of description encoding in utf-8
Status: RESOLVED FIXED
Alias: None
Product: kcron
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Gary Meyer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-12 04:11 UTC by Alexandr Zamaraev (aka Tonal)
Modified: 2025-11-18 07:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bad descr show (45.32 KB, image/png)
2024-10-12 04:11 UTC, Alexandr Zamaraev (aka Tonal)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandr Zamaraev (aka Tonal) 2024-10-12 04:11:42 UTC
Created attachment 174719 [details]
bad descr show

SUMMARY
Descrition in UTF-8 Incorrect display

Source for crontab
```
# -*- coding: utf-8 -*-
LANG=ru_RU.UTF-8
CONTENT_TYPE="text/plain; charset=utf-8"

#Отчёты о времени в базу
5 12,16 * * 1-5 /home/user/bin/TimeMng/put_time.sh

#Подсчёт времени нахождения на работе
10,30,50 8-20 * * *     /home/user/bin/TimeMng/tabel.py

# Отслеживание VK активности 
*/30 * * * * /home/user/lang/work/vk_load/timed.sh

# Файл создан программой KCron Чт, 12 февраля 2015 14:11.
```

SOFTWARE/OS VERSIONS
Operating System: KDE neon 6.2
KDE Plasma Version: 6.2.0
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.8.0-45-generic (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
$ apt show kde-config-cron -a
Package: kde-config-cron
Version: 4:24.08.1-0zneon+24.04+noble+release+build4
Priority: optional
Section: admin
Source: kcron
Maintainer: Neon CI <neon@kde.org>
Installed-Size: 2 343 kB
Depends: cron | anacron, kf6-kauth (>= 6.6.0), kf6-kcmutils (>= 6.6.0), kf6-kconfigwidgets (>= 6.6.0), kf6-kcoreaddons (>= 6.6.0), kf6-ki18n (>= 6.6.0), kf6-kio (>= 6.6.0), kf6-kwidgetsaddons (>= 6.6.0), libc6 (>= 2.34), libstdc++6 (>= 5), qt6-base (>= 6.7.2)
Suggests: khelpcenter
Homepage: http://www.kde.org/
Download-Size: 976 kB
APT-Manual-Installed: yes
APT-Sources: http://archive.neon.kde.org/user noble/main amd64 Packages
Description: program scheduler frontend
 kde-config-cron is a KDE configuration module for scheduling programs to run
 at specific intervals using cron, the UNIX scheduling service.
 .
 This package is part of the KDE administration module.
Comment 1 Bug Janitor Service 2025-04-03 08:05:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/kcron/-/merge_requests/39
Comment 2 Laurent Montel 2025-11-18 07:54:02 UTC
Git commit 4b525501ea791334c387ce03a0f47af2faeeece8 by Laurent Montel, on behalf of Evgeny Chesnokov.
Committed on 18/11/2025 at 07:53.
Pushed by mlaurent into branch 'master'.

Use QString::fromUtf8 instead of QLatin1String

M  +2    -2    src/crontablib/ctcron.cpp

https://invent.kde.org/system/kcron/-/commit/4b525501ea791334c387ce03a0f47af2faeeece8