Use QString::fromUtf8 instead of QLatin1String

BUG: 494580